# fastapi-sqlalchemy-template

./: .copier-answers.yml  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  Makefile  Taskfile.yml  action.yml  alembic.ini  constraints.in  constraints.txt  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  readme.md  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.prod.in  requirements.prod.txt  requirements.txt
.github/workflows/: main.yml
app/: __main__.py  application.py  config.py  db.py  deps.py  exceptions.py  ioc.py  main.py  models.py  repositories.py  schemas.py  settings.py
app/api/: decks.py  views.py
app/apps/decks/: models.py  schemas.py  views.py
app/db/: base.py  deps.py  exceptions.py  helpers.py  models.py  resource.py  session.py  session_context.py  utils.py
app/helpers/: datetime.py
app/repositories/: base.py  decks.py
app/resources/: db.py
app/utils/: datetime.py  db.py
migrations/: env.py
migrations/versions/: 2021-05-08_init.py  5815e8f30d36_.py  abb62721e019_init.py  f4fd1004f073_.py
tests/: conftest.py  factories.py  test_cards.py  test_data.py  test_decks.py  test_main.py
tests/api/: test_cards.py  test_decks.py
tests/decks/: conftest.py  test_cards.py  test_decks.py
